	value into time_t before formatting the output string.

   +	Added call-ahead-as-sender option.  When set, perform the call-
	ahead using the original MAIL FROM:<sender> instead of the MAIL
	FROM:<> (null sender). Some down stream mail stores reject MAIL
	FROM:<> or reject a sender at RCPT TO:

   !	attachmentRset: fixed potential double-free error

--2.3.8--

   !	attachmentContent: changed FILTER_ATTACHMENT_CONTENT_SHORTCUT
   	test, which for long messages (>64 KB) meant that attachmentDot was
	never called.

--2.3.7--

   !	access.c: Removed use of smdbAccessIsOk that folded SMDB_ACCESS_
	codes into a limited subset. This had the adverse affect of
	folding DISARD into an OK. This is done for sendmail milters,
	but in smtpf we don't support all the sendmail action words.

--2.3.6--

   !	accessMail, accessRcpt: Combo tags never supported pattern lists
	by design; this was due in part to the question of what string
	should be tested against the pattern list (first, second, first
	and second joined). After some thought, have enhanced the design
	of combo tags to allow for pattern lists that check the first
	tag element followed by the second tag element against the
	pattern list. Requested by Quentin Campbell.


--2.3.5--

   !	spamd_open: remove duplicate Received header.

--2.3.4--

  !!	Fixed potential seg.fault by adding missing message "trap" flag
	to the summary table to match MSG_TRAP.

   !	clamd, ctasd: skip scanning for discard or trap.

   !	Updated new message numbers.

--2.3.3--

   !	CLIENT_IS_TRAP and MSG_TRAP should continue to set SMTPF_DISCARD
   	until cmdData hits the final dot in order to by-pass all the spam
   	tests.

   !	chunkBufferForward: don't count dot transparency application when
   	forwarding a chunk, otherwise the output loop could prematurely
   	terminate, losing output.

   !	Reassert that TRAP messages are excluded from "click" replies.

--2.3.2--

   !	Corrected definition of MSG_TRAP. The changes in 2.3.1 redefined