@@ -109,15 +109,15 @@ MODULE_O = access$O attachment$O avastd$O clamd$O cli$O click$O concurrent$O \
 	msglimit$O null$O pad$O p0f$O rate$O rbl$O sav$O save$O savdid$O siq$O \
 	size$O spamd2$O spf$O timelimit$O uribl$O
 
-CORE = server$O smtpf$O cache$O cmd$O dsn$O filter$O latency$O mx$O options$O \
+CORE = built$O server$O smtpf$O cache$O cmd$O dsn$O filter$O latency$O mx$O options$O \
        route$O reply$O stats$O summary$O verbose$O
 
 OBJS = ${CORE} ${MODULE_O}
 
-${TARNAME}: BUILD_ID.TXT ${OBJS} unix$O lickey$O
+${TARNAME}: BUILD_ID.TXT ${OBJS} unix$O lickey$O built
 	${CC} ${LDFLAGS} ${CC_E}${TARNAME}$E ${OBJS} unix$O lickey$O ${LIBS}
 
-d-${TARNAME}: BUILD_ID.TXT ${OBJS} unix$O lickey$O
+d-${TARNAME}: BUILD_ID.TXT ${OBJS} unix$O lickey$O built
 	${CC} ${LDFLAGS} ${CC_E}d-${TARNAME}$E ${OBJS} unix$O lickey$O ${LIBS} ../../lib/util/DebugMalloc$O
 
 # Build native Windows app. using gcc under Cygwin, without cygwin1.dll.
@@ -132,7 +132,7 @@ d-${TARNAME}: BUILD_ID.TXT ${OBJS} unix$O lickey$O
 #
 # NOTE this produces smaller code than Borland C++ 5.5 command line tools.
 #
-${TARNAME}.exe: BUILD_ID.TXT ${OBJS} windows$O lickey$O
+${TARNAME}.exe: BUILD_ID.TXT ${OBJS} windows$O lickey$O built
 	gcc ${LDFLAGS} -mno-cygwin -Wl,--heap,131072,--stack,32768 ${CC_E}${TARNAME}.exe ${OBJS} windows$O lickey$O ${LIBS}
 
 #-ladvapi32
@@ -150,6 +150,9 @@ access$O : config.h ${TARNAME}.h access.c
 
 attachment$O : config.h ${TARNAME}.h attachment.c
 	${CC} ${CFLAGS} -c attachment.c
+
+built:
+	${CC} ${CFLAGS} -D_BUILT="\"`date +'%a, %d %b %Y %H:%M:%S %z'`\"" -c built.c
 
 cache$O : config.h ${TARNAME}.h cache.c
 	${CC} ${CFLAGS} -c cache.c
